--- a/MicroAskingWebApi/appsettings.Development.json
+++ b/MicroAskingWebApi/appsettings.Development.json
@@ -5,13 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "URLs": {
-    "Inference": {
-      "Base": "http://127.0.0.1:5000",
-      "Routes": {
-        "Post": "/api.micro-asking.inference"
-      }
-    }
+  "SocketServer": {
+    "IpAddress": "127.0.0.1",
+    "Port": 13000
   },
   "ConnectionStrings": {
     "Default": "mongodb://localhost:27017/"
@@ -21,8 +17,8 @@
     "QuestionIndexPath": "development-question-index",
     "QueryCount": 10
   },
-  "Tokenizer": {
-    "ToIdsPath": "./bin/Debug/net6.0/xlm_roberta_base.bin",
-    "ToWordsPath": "./bin/Debug/net6.0/xlm_roberta_base.i2w"
-  }
+  "CustomToken": {
+    "Sep": "[sep]"
+  },
+  "TopResultsLimit": 10
 }
