--- a/MicroAskingWebApi/appsettings.json
+++ b/MicroAskingWebApi/appsettings.json
@@ -6,13 +6,9 @@
     }
   },
   "AllowedHosts": "*",
-  "URLs": {
-    "Inference": {
-      "Base": "",
-      "Routes": {
-        "Post": ""
-      }
-    }
+  "SocketServer": {
+    "IpAddress": "",
+    "Port": 13000
   },
   "ConnectionStrings": {
     "Default": ""
@@ -20,9 +16,9 @@
   "LuceneSettings": {
     "ContextIndexPath": "context-index",
     "QuestionIndexPath": "question-index",
-    "QueryCount": 0
+    "QueryCount": 10
   },
-  "DBSettings": {
-
+  "CustomToken": {
+    "Sep": "[sep]"
   }
 }
